# QuantAI

./: README.md
intent-market-model/: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
intent-market-model/data/backtest/: companies.csv  hiring_snapshots.csv  report.csv
intent-market-model/data/fixtures/: acme-ai.com.json  orbit-fintech.com.json  sunwave.io.json
intent-market-model/data/fixtures/sec/: acme-ai.com.json  orbit-fintech.com.json
intent-market-model/jobs/: backfill.py  daily_pipeline.py
intent-market-model/scripts/: demo.sh  run_backtest_report.py  seed_backtest_outcomes.py  seed_backtest_signals.py
intent-market-model/src/agents/: base.py  orchestrator.py
intent-market-model/src/agents/causal_memory/: agent.py
intent-market-model/src/agents/decision_translator/: agent.py
intent-market-model/src/agents/intent_inference/: agent.py  explanations.py  fusion.py  taxonomy.py
intent-market-model/src/agents/signal_harvester/: agent.py
intent-market-model/src/app/: cli.py  main.py
intent-market-model/src/app/frontend/: app.js  index.html  styles.css
intent-market-model/src/app/schemas/: api_key.py  backtest.py  company.py  explain.py  graph.py  intent.py  outcome.py  signal_event.py  tenant.py  (+2 more)
intent-market-model/src/core/: config.py  logger.py  types.py
intent-market-model/src/intent_market_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
intent-market-model/tests/integration/: test_ingest.py
intent-market-model/tests/unit/: test_rule_scorer.py
(+49 files in other folders)
